tests/ui/hygiene/fields.stderr
error: type `foo::S` is private
  --> $DIR/fields.rs:13:17
   |
LL | /     pub macro m($S:ident, $x:ident) {{
LL | |         struct $S {
LL | |             $x: u32,
LL | |             x: i32,
...  |
LL | |         let s = S { x: 0 };
   | |                 ^^^^^^^^^^ private type
...  |
LL | |         s
LL | |     }}
   | |______- in this expansion of `foo::m!`
...
LL |       let s = foo::m!(S, x);
   |               ------------- in this macro invocation

error: type `foo::S` is private
  --> $DIR/fields.rs:14:17
   |
LL | /     pub macro m($S:ident, $x:ident) {{
LL | |         struct $S {
LL | |             $x: u32,
LL | |             x: i32,
...  |
LL | |         let _ = s.x;
   | |                 ^ private type
...  |
LL | |         s
LL | |     }}
   | |______- in this expansion of `foo::m!`
...
LL |       let s = foo::m!(S, x);
   |               ------------- in this macro invocation

error: type `T` is private
  --> $DIR/fields.rs:16:17
   |
LL | /     pub macro m($S:ident, $x:ident) {{
LL | |         struct $S {
LL | |             $x: u32,
LL | |             x: i32,
...  |
LL | |         let t = T(0);
   | |                 ^^^^ private type
...  |
LL | |         s
LL | |     }}
   | |______- in this expansion of `foo::m!`
...
LL |       let s = foo::m!(S, x);
   |               ------------- in this macro invocation

error: type `T` is private
  --> $DIR/fields.rs:17:17
   |
LL | /     pub macro m($S:ident, $x:ident) {{
LL | |         struct $S {
LL | |             $x: u32,
LL | |             x: i32,
...  |
LL | |         let _ = t.0;
   | |                 ^ private type
...  |
LL | |         s
LL | |     }}
   | |______- in this expansion of `foo::m!`
...
LL |       let s = foo::m!(S, x);
   |               ------------- in this macro invocation

error: aborting due to 4 previous errors

